--- a/.github/workflows/repository-updater.yaml
+++ b/.github/workflows/repository-updater.yaml
@@ -15,6 +15,8 @@ jobs:
   announce:
     name: Announce add-on update
     needs: workflows
+    if: |
+      secrets.DISCORD_WEBHOOK
     runs-on: ubuntu-latest
     steps:
       - name: 📢 Announce on Discord server
