--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -1,46 +1,45 @@
----
 name: QuestDB
-version: e984aba
+version: 0.0.1-alpha
 url: https://questdb.com/
-image: "ghcr.io/stevusprimus-hassio-addons/questdb/{arch}"
+image: ghcr.io/stevusprimus-hassio-addons/questdb/{arch}
 panel_icon: mdi:face-recognition
 slug: questdb
 description: QuestDB is the fastest growing open-source time-series database
 arch:
-  - amd64
-  - aarch64
+- amd64
+- aarch64
 startup: services
 init: false
 ingress: true
+ingress_entry: index.html
 ingress_port: 9443
 privileged:
-  - PERFMON
+- PERFMON
 ports:
-  9000/tcp: 9000
+  9000/tcp: null
   8812/tcp: 8812
   9009/tcp: 9009
+  9449/tcp: 9449
 ports_description:
-  9000/tcp: HTTP API
-  8812/tcp: InfluxDB Line Protocol
-  9009/tcp: PostgreSQL wire protocol
+  9000/tcp: HTTP API (not exposed by default)
+  8812/tcp: PostgreSQL wire protocol
+  9449/tcp: InfluxDB Line Protocol SSL (only available when SSL is enabled)
+  9009/tcp: InfluxDB Line Protocol
 map:
-  - addon_config:rw
-  - ssl
+- addon_config:rw
+- ssl
+- share:rw
 options:
-  # auth: true
-  # reporting: true
   ssl: true
   certfile: fullchain.pem
   keyfile: privkey.pem
   envvars: []
+  log_level: info
 schema:
   log_level: list(trace|debug|info|notice|warning|error|fatal)?
-  # auth: bool
-  # reporting: bool
   ssl: bool
   certfile: str
   keyfile: str
   envvars:
-    - name: match(^INFLUXDB_([A-Z0-9_])+$)
-      value: str
-  leave_front_door_open: bool?
+  - name: match(^QUESTDB_([A-Z0-9_])+$)
+    value: str
