:tada: Release of add-on QuestDB 1.0.0-RC1

--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -1,8 +1,9 @@
 name: QuestDB
-version: 0.0.1-beta2
+version: 1.0.0-RC1
 url: https://questdb.com/
 image: ghcr.io/stevusprimus-hassio-addons/questdb/{arch}
-panel_icon: mdi:face-recognition
+panel_icon: mdi:database
+panel_title: QuestDB
 slug: questdb
 description: QuestDB is the fastest growing open-source time-series databases
 arch:
